Fixed some dialogs overflowing viewport vertical height

--- a/src/css/boom/dialog.less
+++ b/src/css/boom/dialog.less
@@ -38,6 +38,8 @@
 
 	.ui-dialog-content {
 		padding: 1.5rem;
+		max-height: calc(~"100vh - 110px") !important;
+		overflow: auto;
 	}
 	
 	button.b-button {
